apps/base/nocodb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nocodb
  labels:
    toolkit.fluxcd.io/tenant: dev-team
