apps/base/nocodb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nocodb
  name: nocodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nocodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/temp-default: "true"
        io.kompose.service: nocodb
    spec:
      containers:
        - env:
            - name: NC_DB
              value: pg://postgres.int.glencook.tech:5432?u=postgres&p=GlenCookTech8090&d=nocodb
          image: nocodb/nocodb:latest
          name: nocodb
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/app/data
              name: nc-data
      restartPolicy: Always
      volumes:
        - name: nc-data
          persistentVolumeClaim:
            claimName: nc-data
status: {}
