apps/base/nocodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (HEAD)
    external-dns.alpha.kubernetes.io/hostname: nocodb.int.glencook.tech
    external-dns.alpha.kubernetes.io/ttl: 60
  creationTimestamp: null
  labels:
    io.kompose.service: nocodb
  name: nocodb
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: nocodb
status:
  loadBalancer: {}
